blrlblelrlrl
/home/pi/midiMind/backend/src/storage/Settings.cpp: In member function ‘bool midiMind::Settings::save()’:
/home/pi/midiMind/backend/src/storage/Settings.cpp:82:40: error: could not convert ‘(&((midiMind::Settings*)this)->midiMind::Settings::database_)->midiMind::Database::beginTransaction()’ from ‘void’ to ‘bool’
   82 |         if (!database_.beginTransaction()) {
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                        |
      |                                        void
/home/pi/midiMind/backend/src/storage/Settings.cpp:82:40: error: in argument to unary !
/home/pi/midiMind/backend/src/storage/Settings.cpp:98:25: error: ‘warn’ is not a member of ‘midiMind::Logger’
   98 |                 Logger::warn("Settings", "Failed to save: " + key);
      |                         ^~~~
/home/pi/midiMind/backend/src/storage/Settings.cpp:102:30: error: could not convert ‘(&((midiMind::Settings*)this)->midiMind::Settings::database_)->midiMind::Database::commit()’ from ‘void’ to ‘bool’
  102 |         if (!database_.commit()) {
      |              ~~~~~~~~~~~~~~~~^~
      |                              |
      |                              void
/home/pi/midiMind/backend/src/storage/Settings.cpp:102:30: error: in argument to unary !
/home/pi/midiMind/backend/src/storage/Settings.cpp: In member function ‘int midiMind::Settings::getInt(const std::string&, int)’:
/home/pi/midiMind/backend/src/storage/Settings.cpp:153:21: error: ‘warn’ is not a member of ‘midiMind::Logger’
  153 |             Logger::warn("Settings", "Invalid int for '" + key + "': " + it->second);
      |                     ^~~~
/home/pi/midiMind/backend/src/storage/Settings.cpp: In member function ‘bool midiMind::Settings::getBool(const std::string&, bool)’:
/home/pi/midiMind/backend/src/storage/Settings.cpp:178:17: error: ‘warn’ is not a member of ‘midiMind::Logger’
  178 |         Logger::warn("Settings", "Invalid bool for '" + key + "': " + it->second);
      |                 ^~~~
/home/pi/midiMind/backend/src/storage/Settings.cpp: In member function ‘double midiMind::Settings::getDouble(const std::string&, double)’:
/home/pi/midiMind/backend/src/storage/Settings.cpp:193:21: error: ‘warn’ is not a member of ‘midiMind::Logger’
  193 |             Logger::warn("Settings", "Invalid double for '" + key + "': " + it->second);
      |                     ^~~~
/home/pi/midiMind/backend/src/storage/Settings.cpp: In member function ‘json midiMind::Settings::getJson(const std::string&, const json&)’:
/home/pi/midiMind/backend/src/storage/Settings.cpp:209:21: error: ‘warn’ is not a member of ‘midiMind::Logger’
  209 |             Logger::warn("Settings", "Invalid JSON for '" + key + "': " + it->second);
      |                     ^~~~
/home/pi/midiMind/backend/src/storage/PresetManager.cpp: In constructor ‘midiMind::PresetManager::PresetManager(std::shared_ptr<midiMind::Database>)’:
/home/pi/midiMind/backend/src/storage/PresetManager.cpp:138:35: error: ‘using std::__shared_ptr_access<midiMind::Database, __gnu_cxx::_S_atomic, false, false>::element_type = class midiMind::Database’ {aka ‘class midiMind::Database’} has no member named ‘isOpen’
  138 |     if (!database_ || !database_->isOpen()) {
      |                                   ^~~~~~
In file included from /home/pi/midiMind/backend/src/storage/PresetManager.h:31,
                 from /home/pi/midiMind/backend/src/storage/PresetManager.cpp:21:
/home/pi/midiMind/backend/src/storage/PresetManager.cpp:139:32: error: ‘DATABASE_NOT_CONNECTED’ is not a member of ‘midiMind::ErrorCode’; did you mean ‘DATABASE_NOT_FOUND’?
  139 |         THROW_ERROR(ErrorCode::DATABASE_NOT_CONNECTED,
      |                                ^~~~~~~~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/storage/../core/Error.h:273:39: note: in definition of macro ‘THROW_ERROR’
  273 |     throw midiMind::MidiMindException(code, message)
      |                                       ^~~~
/home/pi/midiMind/backend/src/storage/PresetManager.cpp: In member function ‘int midiMind::PresetManager::create(const midiMind::Preset&)’:
/home/pi/midiMind/backend/src/storage/PresetManager.cpp:206:32: error: ‘VALIDATION_ERROR’ is not a member of ‘midiMind::ErrorCode’
  206 |         THROW_ERROR(ErrorCode::VALIDATION_ERROR, "Preset name cannot be empty");
      |                                ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/storage/../core/Error.h:273:39: note: in definition of macro ‘THROW_ERROR’
  273 |     throw midiMind::MidiMindException(code, message)
      |                                       ^~~~
/home/pi/midiMind/backend/src/storage/PresetManager.cpp: In member function ‘std::optional<midiMind::Preset> midiMind::PresetManager::load(int)’:
/home/pi/midiMind/backend/src/storage/PresetManager.cpp:265:21: error: ‘warn’ is not a member of ‘midiMind::Logger’
  265 |             Logger::warn("PresetManager", "Preset not found: " + std::to_string(id));
      |                     ^~~~
/home/pi/midiMind/backend/src/storage/PresetManager.cpp: In member function ‘void midiMind::PresetManager::update(int, const midiMind::Preset&)’:
/home/pi/midiMind/backend/src/storage/PresetManager.cpp:436:32: error: ‘VALIDATION_ERROR’ is not a member of ‘midiMind::ErrorCode’
  436 |         THROW_ERROR(ErrorCode::VALIDATION_ERROR, "Preset name cannot be empty");
      |                                ^~~~~~~~~~~~~~~~
/home/pi/midiMind/backend/src/storage/../core/Error.h:273:39: note: in definition of macro ‘THROW_ERROR’
  273 |     throw midiMind::MidiMindException(code, message)
      |                                       ^~~~
make[2]: *** [CMakeFiles/midimind.dir/build.make:177: CMakeFiles/midimind.dir/src/storage/Settings.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/midimind.dir/build.make:205: CMakeFiles/midimind.dir/src/storage/PresetManager.cpp.o] Error 1
In file included from /home/pi/midiMind/backend/src/core/Application.cpp:50:
/home/pi/midiMind/backend/src/core/../api/CommandHandler.h:109:25: error: ‘MidiFileManager’ was not declared in this scope; did you mean ‘MidiFileReader’?
  109 |         std::shared_ptr<MidiFileManager> fileManager
      |                         ^~~~~~~~~~~~~~~
      |                         MidiFileReader
/home/pi/midiMind/backend/src/core/../api/CommandHandler.h:109:40: error: template argument 1 is invalid
  109 |         std::shared_ptr<MidiFileManager> fileManager
      |                                        ^
/home/pi/midiMind/backend/src/core/../api/CommandHandler.h:275:21: error: ‘MidiFileManager’ was not declared in this scope; did you mean ‘MidiFileReader’?
  275 |     std::shared_ptr<MidiFileManager> fileManager_;
      |                     ^~~~~~~~~~~~~~~
      |                     MidiFileReader
/home/pi/midiMind/backend/src/core/../api/CommandHandler.h:275:36: error: template argument 1 is invalid
  275 |     std::shared_ptr<MidiFileManager> fileManager_;
      |                                    ^
make[2]: *** [CMakeFiles/midimind.dir/build.make:93: CMakeFiles/midimind.dir/src/core/Application.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
